# jspace

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  analyze_categories.py  analyze_categories_surface.py  analyze_crossmodel.py  analyze_deep.py  analyze_hallucination_anatomy.py  analyze_lies_v2.py  analyze_popqa.py  analyze_probes.py  analyze_router.py  analyze_tabfm.py  analyze_tabfm_31b_blind.py  analyze_tabfm_sweep.py  analyze_wrong_crosstab.py  benchmark_baselines.py  build_report.py  fit.py  make_fake_entities.py  make_figure3.py  make_figure6.py  make_figures2.py  modal_campaign.py  modal_fit.py  probe.py  probe_categories.py  probe_stability.py  probe_uncertainty.py  pyproject.toml  quant_emotions.py  requirements.txt  score_expensive_baselines.py
.github/: PULL_REQUEST_TEMPLATE.md
analysis/: analyze_categories.py  analyze_categories_surface.py  analyze_crossmodel.py  analyze_hallucination_anatomy.py  analyze_lies_v2.py  analyze_popqa.py  analyze_router.py  analyze_tabfm.py  analyze_tabfm_31b_blind.py  analyze_tabfm_sweep.py  analyze_tabfm_transfer.py  analyze_wrong_crosstab.py  benchmark_baselines.py  build_demo_data.py  causal_hint_patch.py  fit.py  make_fake_entities.py  make_figure3.py  make_figure6.py  make_figures.py  modal_campaign.py  modal_fit.py  probe.py  probe_categories.py  probe_stability.py  probe_uncertainty.py  quant_emotions.py  score_expensive_baselines.py
campaign/: PEER_REVIEW_CODEX.md  PREREG_STAGE1.md  PREREG_STAGE2.md  README.md  build_feature_table.py  build_manifest.py  (+25 more)
(+123 files in other folders)
